# claude-sessions

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  session.rs  watch.rs  waybar.rs
tests/: integration.rs
