[package]
name = "claude-sessions"
version = "0.1.5"
edition = "2024"
description = "CLI tool that tracks Claude Code sessions and exposes a Waybar widget"
license = "MIT"
repository = "https://github.com/kloki/claude-sessions"


[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
serde_json = "1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
